<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.loveday.viewmodel.MainViewModel" />

        <variable
            name="url"
            type="com.example.loveday.viewmodel.UrlImageViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/love_counter"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <ImageButton
                android:id="@+id/ib_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_settings_24"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_love"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/rl_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:src="@drawable/love"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_together_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/together_for"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_number_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_together_for"
                android:gravity="center_horizontal"
                android:text="@{model.dayNumber.toString(), default = 0}"
                android:textColor="@color/white"
                android:textSize="80sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_number_day"
                android:gravity="center_horizontal"
                android:text="@string/days"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ib_boy"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@{url.urlImageBoy, default = @drawable/icon_man}" />

                <TextView

                    android:id="@+id/tv_name_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_boy"
                    android:layout_centerHorizontal="true"
                    android:text="@{model.boyName, default = Boyfriend}"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name_boy"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_baseline_boy_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_age_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@{model.boyAge, default = 0}"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_sex"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ib_girl"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@{url.urlImageGirl, default = @drawable/ic_woman}" />

                <TextView
                    android:id="@+id/tv_name_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_girl"
                    android:layout_centerHorizontal="true"
                    android:text="@{model.girlName, default = Girlfriend}"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name_girl"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_baseline_girl_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_age_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@{model.girlAge, default = 0}"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>